<resources>
    <string name="btn_open">OPEN</string>
    <string name="btn_new">NEW</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_undo">UNDO</string>
    <string name="btn_redo">REDO</string>
    <string name="btn_font">FONT</string>
    <string name="hint_editor">Type here&#8230;</string>
    <string name="default_filename">Untitled</string>
    <string name="path_template">/%1$s/%2$s</string>
</resources>